--- a/www/docs/main/adapters/aws/event-bridge.mdx
+++ b/www/docs/main/adapters/aws/event-bridge.mdx
@@ -102,7 +102,7 @@ export const handler = ServerlessAdapter.new(app)
 
 :::caution
 
-When you configure your API with some `basePath` like `/prod`, you should set `eventBridgeForwardPath` as `/prod/eventbridge` instead leave as default `/dynamo`.
+When you configure your API with some `basePath` like `/prod`, you should set `eventBridgeForwardPath` as `/prod/eventbridge` instead leave as default `/eventbridge`.
 
 :::
 
