docs(getting-started): added version 16.x and 18.x to the docs

--- a/www/docs/main/getting-started/installation.mdx
+++ b/www/docs/main/getting-started/installation.mdx
@@ -12,7 +12,7 @@ The <a href="https://www.npmjs.com/package/@h4ad/serverless-adapter">Serverless 
 
 ## Requirements
 
-Current versions supported by this library are 12.x and 14.x, we have not tested on other versions.
+Current versions supported by this library are 12.x, 14.x, 16.x and 18.x.
 
 ## Installing
 
