docs(trpc): added documentation about new framework

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -38,7 +38,6 @@ If you don't know what each thing means, see [Architecture](./architecture).
 
 Currently, we support these frameworks:
 
-- [NestJS](https://nestjs.com/), see the [documentation about](./frameworks/nestjs) to know how to integrate.
 - [Express](https://expressjs.com/) by using ([ExpressFramework](./frameworks/express))
 - [Fastify](https://www.fastify.io/) by using ([FastifyFramework](./frameworks/fastify))
 - [Hapi](https://hapi.dev/) by using ([HapiFramework](./frameworks/hapi))
@@ -46,6 +45,8 @@ Currently, we support these frameworks:
 - Async Initialization by using ([LazyFramework](./frameworks/lazy))
   - Use this framework to provide a way to create the instance of your app asynchronously.
   - With him, you can create an instance of Express or Fastify asynchronously, [see the docs](./frameworks/lazy).
+- [NestJS](https://nestjs.com/), see the [documentation about](./frameworks/nestjs) to know how to integrate.
+- [tRPC](https://trpc.io/), see the [documentation about](./frameworks/trpc) to know how to integrate.
 
 We support these event sources:
 
