--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -66,7 +66,7 @@ We support these event sources:
   - [Event Function](https://support.huaweicloud.com/intl/en-us/usermanual-functiongraph/functiongraph_01_1441.html): Look [this section](./handlers/huawei#event-function).
     - [Api Gateway](https://support.huaweicloud.com/intl/en-us/devg-functiongraph/functiongraph_02_0102.html#functiongraph_02_0102__li5178638110137) by using ([HuaweiApiGatewayAdapter](./adapters/huawei/huawei-api-gateway)).
 - Azure
-  - [The support is coming soon.](https://github.com/H4ad/serverless-adapter/issues/3)
+  - [Http Trigger V4](https://docs.microsoft.com/en-us/azure/azure-functions/functions-bindings-timer?tabs=in-process&pivots=programming-language-javascript) by using ([HttpTriggerV4Adapter](./adapters/azure/http-trigger-v4)).
 - Firebase
   - The support is coming soon.
 - GCP
