docs(intro): added missing azure handler

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -80,6 +80,7 @@ We support these resolvers:
 
 We support these handlers:
 
+- Azure by using ([AzureHandler](./handlers/azure))
 - Default by using ([DefaultHandler](./handlers/default))
 - Huawei by using ([HttpHuaweiHandler](./handlers/huawei#http-function)) and ([EventHuaweiHandler](./handlers/huawei#event-function))
 
