docs(http-trigger-v4): fixed broken link

--- a/www/docs/main/adapters/azure/http-trigger-v4.mdx
+++ b/www/docs/main/adapters/azure/http-trigger-v4.mdx
@@ -101,9 +101,9 @@ export const handler = ServerlessAdapter.new(app)
   .build();
 ```
 
-:::danger
+:::caution
 
-You MUST use the [PromiseResolver](../resolvers/promise) combined with [AzureHandler](../handlers/azure) to make this adapter work.
+You MUST use the [PromiseResolver](../../resolvers/promise) combined with [AzureHandler](../../handlers/azure) to make this adapter work.
 
 :::
 
