docs(blog): fixed issue with broken link

--- a/www/blog/2022-07-17-updates-and-releases.mdx
+++ b/www/blog/2022-07-17-updates-and-releases.mdx
@@ -17,7 +17,7 @@ compare the changes [here](https://github.com/H4ad/serverless-adapter/compare/v2
 
 ## Changes
 
-42 commits, 6905 lines added, 601 lines deleted, that's the size of the changes since [The Beginning](./the-beginning).
+42 commits, 6905 lines added, 601 lines deleted, that's the size of the changes since [The Beginning](/blog/the-beginning).
 
 I'm very proud of how things are going, I learned a lot by studying to implement these new things.
 
