docs(deepkit): added docs for deepkit

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -32,6 +32,7 @@ If you don't know what each thing means, see [Architecture](./architecture).
 
 Currently, we support these frameworks:
 
+- [Deepkit](https://docs.deepkit.io/) by using ([HttpDeepkitFramework](./frameworks/deepkit))
 - [Express](https://expressjs.com/) by using ([ExpressFramework](./frameworks/express))
 - [Fastify](https://www.fastify.io/) by using ([FastifyFramework](./frameworks/fastify))
 - [Hapi](https://hapi.dev/) by using ([HapiFramework](./frameworks/hapi))
