docs(trpc): fixed typo mistake

--- a/www/docs/main/frameworks/trpc.mdx
+++ b/www/docs/main/frameworks/trpc.mdx
@@ -15,7 +15,7 @@ First, you need to ensure you have the libs installed, so run this code:
 npm i --save @trpc/server
 ```
 
-Then, you need you just need to use the [TrpcFramework](../../api/Frameworks/TrpcFramework) when you create your adapter, like:
+Then, you just need to use the [TrpcFramework](../../api/Frameworks/TrpcFramework) when you create your adapter, like:
 
 ```ts title="index.ts"
 import * as trpc from '@trpc/server';
