docs(digital-ocean): added docs about how to integrate with digital ocean

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -68,6 +68,8 @@ We support these event sources:
     - [Api Gateway](https://support.huaweicloud.com/intl/en-us/devg-functiongraph/functiongraph_02_0102.html#functiongraph_02_0102__li5178638110137) by using ([HuaweiApiGatewayAdapter](./adapters/huawei/huawei-api-gateway)).
 - Azure
   - [Http Trigger V4](https://docs.microsoft.com/en-us/azure/azure-functions/functions-bindings-timer?tabs=in-process&pivots=programming-language-javascript) by using ([HttpTriggerV4Adapter](./adapters/azure/http-trigger-v4)).
+- Digital Ocean
+  - [Functions](https://docs.digitalocean.com/products/functions/quickstart/sample-functions/) by using [DigitalOceanHandler](./handlers/digital-ocean).
 - Firebase
   - [Http Events](https://firebase.google.com/docs/functions/http-events) using ([HttpFirebaseHandler](./handlers/firebase)).
 - GCP
@@ -83,6 +85,7 @@ We support these handlers:
 
 - Azure by using ([AzureHandler](./handlers/azure))
 - Default by using ([DefaultHandler](./handlers/default))
+- Digital Ocean by using ([DigitalOceanHandler](./handlers/digital-ocean))
 - Firebase by using ([HttpFirebaseHandler](./handlers/firebase))
 - Huawei by using ([HttpHuaweiHandler](./handlers/huawei#http-function)) and ([EventHuaweiHandler](./handlers/huawei#event-function))
 
