docs(digital-ocean): added docs about cli

--- a/www/docs/main/handlers/digital-ocean.mdx
+++ b/www/docs/main/handlers/digital-ocean.mdx
@@ -27,6 +27,8 @@ packages:
 +        web: 'raw'
 ```
 
+Also, you will need `doctl`, the DigitalOcean CLI, see [how to install](https://docs.digitalocean.com/reference/doctl/how-to/install/) before proceeding.
+
 ## Usage
 
 Import and call the method [setHandler](../../api/ServerlessAdapter#method-sethandler), as per the code below:
