feat(s3): added s3 adapter to aws

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -62,6 +62,8 @@ We support these event sources:
     using ([SNSAdapter](./adapters/aws/sns))
   - [AWS SQS](https://docs.aws.amazon.com/pt_br/lambda/latest/dg/with-sqs.html) by
     using ([SQSAdapter](./adapters/aws/sqs))
+  - [AWS S3](https://docs.aws.amazon.com/pt_br/lambda/latest/dg/with-s3.html) by
+    using ([S3Adapter](./adapters/aws/s3))
 - Huawei
   - [Http Function](https://support.huaweicloud.com/intl/en-us/usermanual-functiongraph/functiongraph_01_1442.html): Look [this section](./handlers/huawei#http-function).
   - [Event Function](https://support.huaweicloud.com/intl/en-us/usermanual-functiongraph/functiongraph_01_1441.html): Look [this section](./handlers/huawei#event-function).
