docs(lazy): added missing import and removed unused import

--- a/www/docs/main/frameworks/lazy.mdx
+++ b/www/docs/main/frameworks/lazy.mdx
@@ -18,7 +18,7 @@ constructor(
 The first parameter is the instance of another framework, so if you want to use [Express](./express) for example, you can just use like this:
 
 ```ts
-import { NestFactory } from '@nestjs/core';
+import { ServerlessAdapter } from '@h4ad/serverless-adapter';
 import { LazyFramework } from '@h4ad/serverless-adapter/lib/frameworks/lazy';
 import { ExpressFramework } from '@h4ad/serverless-adapter/lib/frameworks/express';
 
