docs(cors): added docs about cors

--- a/www/docs/main/frameworks/deepkit.mdx
+++ b/www/docs/main/frameworks/deepkit.mdx
@@ -91,3 +91,9 @@ new FrameworkModule({ debug: true, httpLog: true }),
 new HttpModule({ debug: false }),
 new FrameworkModule({ debug: false, httpLog: false }),
 ```
+
+:::tip
+
+Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+
+:::
