--- a/www/docs/main/frameworks/express.mdx
+++ b/www/docs/main/frameworks/express.mdx
@@ -36,3 +36,9 @@ export const handler = ServerlessAdapter.new(app)
 Is your application instance creation asynchronous? Look the [LazyFramework](./lazy) which helps you in asynchronous startup.
 
 :::
+
+:::tip
+
+Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+
+:::
