--- a/www/docs/main/frameworks/fastify.mdx
+++ b/www/docs/main/frameworks/fastify.mdx
@@ -36,3 +36,9 @@ Is your application instance creation asynchronous? Look the [LazyFramework](./l
 
 :::
 
+:::tip
+
+Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+
+:::
+
