--- a/www/docs/main/frameworks/lazy.mdx
+++ b/www/docs/main/frameworks/lazy.mdx
@@ -57,4 +57,9 @@ The solution above is inspired by [top-level await](https://aws.amazon.com/pt/bl
 
 :::
 
+:::tip
+
+Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+
+:::
 
