--- a/www/docs/main/frameworks/nestjs.mdx
+++ b/www/docs/main/frameworks/nestjs.mdx
@@ -105,3 +105,8 @@ export const handler = ServerlessAdapter.new(null)
 
 </Tabs>
 
+:::tip
+
+Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+
+:::
