--- a/www/docs/main/frameworks/koa.mdx
+++ b/www/docs/main/frameworks/koa.mdx
@@ -37,4 +37,8 @@ Is your application instance creation asynchronous? Look the [LazyFramework](./l
 
 :::
 
+:::tip
 
+Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+
+:::
