--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -37,11 +37,17 @@ Currently, we support these frameworks:
 - [Fastify](https://www.fastify.io/) by using ([FastifyFramework](./frameworks/fastify))
 - [Hapi](https://hapi.dev/) by using ([HapiFramework](./frameworks/hapi))
 - [Koa](https://koajs.com/) by using ([KoaFramework](./frameworks/koa))
+- [NestJS](https://nestjs.com/), see the [documentation about](./frameworks/nestjs) to know how to integrate.
+- [tRPC](https://trpc.io/), see the [documentation about](./frameworks/trpc) to know how to integrate.
+
+Additionally, we have some helper frameworks that you can combine with the above frameworks to give more power to your application:
+
 - Async Initialization by using ([LazyFramework](./frameworks/lazy))
   - Use this framework to provide a way to create the instance of your app asynchronously.
   - With him, you can create an instance of Express or Fastify asynchronously, [see the docs](./frameworks/lazy).
-- [NestJS](https://nestjs.com/), see the [documentation about](./frameworks/nestjs) to know how to integrate.
-- [tRPC](https://trpc.io/), see the [documentation about](./frameworks/trpc) to know how to integrate.
+- CORS support without rely on original framework with ([CorsFramework](./frameworks/cors))
+  - Use this framework to provide a way to handle CORS in frameworks like `trpc`.
+  - Or use to get faster responses when method is `OPTIONS`.
 
 We support these event sources:
 
