docs(pages): restructure all pages

--- a/www/docs/main/advanced/adapters/introduction.mdx
+++ b/www/docs/main/advanced/adapters/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 position: 1
 ---
 
-As we see in the [Architecture](../architecture) section, adapters are responsible for handling the received event,
+As we see in the [Architecture](../../architecture) section, adapters are responsible for handling the received event,
 transforming the request in a way that your application can understand and then transforming the response in a way your cloud can understand.
 
 The interface that represents an adapter is:
@@ -30,7 +30,7 @@ export interface AdapterContract<
 }
 ```
 
-> You can see in more details [in the API section](../../api/Contracts/AdapterContract).
+> You can see in more details [in the API section](../../../api/Contracts/AdapterContract).
 
 ## getAdapterName
 
