--- a/www/docs/main/frameworks/deepkit.mdx
+++ b/www/docs/main/frameworks/deepkit.mdx
@@ -59,7 +59,7 @@ Need more examples? See more examples [here](https://github.com/H4ad/serverless-
 
 :::tip
 
-Is your application instance creation asynchronous? Look the [LazyFramework](./lazy) which helps you in asynchronous startup.
+Is your application instance creation asynchronous? Look the [LazyFramework](./helpers/lazy) which helps you in asynchronous startup.
 
 :::
 
@@ -94,6 +94,6 @@ new FrameworkModule({ debug: false, httpLog: false }),
 
 :::tip
 
-Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+Need to deal with CORS? See [CorsFramework](./helpers/cors) which helps you to add correct headers.
 
 :::
