--- a/www/docs/main/frameworks/helpers/cors.mdx
+++ b/www/docs/main/frameworks/helpers/cors.mdx
@@ -37,7 +37,7 @@ npm i --save-dev @types/cors
 
 ## Usage
 
-The first parameter is the instance of another framework, so if you want to use [Express](./express) for example, you can just use like this:
+The first parameter is the instance of another framework, so if you want to use [Express](../express) for example, you can just use like this:
 
 ```ts
 import { ServerlessAdapter } from '@h4ad/serverless-adapter';
