--- a/www/docs/main/frameworks/helpers/lazy.mdx
+++ b/www/docs/main/frameworks/helpers/lazy.mdx
@@ -15,7 +15,7 @@ constructor(
 )
 ```
 
-The first parameter is the instance of another framework, so if you want to use [Express](./express) for example, you can just use like this:
+The first parameter is the instance of another framework, so if you want to use [Express](../express) for example, you can just use like this:
 
 ```ts
 import { ServerlessAdapter } from '@h4ad/serverless-adapter';
