--- a/www/docs/main/frameworks/nestjs.mdx
+++ b/www/docs/main/frameworks/nestjs.mdx
@@ -107,6 +107,6 @@ export const handler = ServerlessAdapter.new(null)
 
 :::tip
 
-Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+Need to deal with CORS? See [CorsFramework](./helpers/cors) which helps you to add correct headers.
 
 :::
