--- a/www/docs/main/getting-started/usage.mdx
+++ b/www/docs/main/getting-started/usage.mdx
@@ -14,7 +14,7 @@ We need to pass to [Serverless Adapter](/docs/api/ServerlessAdapter) the instanc
 
 - Framework: [Express](../frameworks/express).
 - Adapters: [AWS Api Gateway V2 Adapter](../adapters/aws/api-gateway-v2).
-- Handler: [Default Handler](../handlers/default).
+- Handler: [Default Handler](../handlers/aws).
 - Resolver: [Promise Resolver](../resolvers/promise).
 
 ```ts
