--- a/www/docs/main/handlers/aws.mdx
+++ b/www/docs/main/handlers/aws.mdx
@@ -1,6 +1,6 @@
 ---
-title: Default
-description: See more about how to integrate with common serverless environments.
+title: AWS
+description: See more about how to integrate with AWS Lambda.
 ---
 
 :::tip
