--- a/www/docs/main/handlers/azure.mdx
+++ b/www/docs/main/handlers/azure.mdx
@@ -84,7 +84,7 @@ export default ServerlessAdapter.new(app)
 
 :::caution
 
-Be careful when exporting the handler because in azure you must `export default` and in [DefaultHandler](./default)
+Be careful when exporting the handler because in azure you must `export default` and in [DefaultHandler](./aws)
 you must `export const handler`.
 
 :::
