--- a/www/docs/main/handlers/huawei.mdx
+++ b/www/docs/main/handlers/huawei.mdx
@@ -61,7 +61,7 @@ In the end, the structure of the zip file you upload looks like this:
 ## Event Function
 
 With Http Function you need to use [HttpHuaweiHandler](./huawei#http-function),
-but with Event Function you should use [DefaultHandler](./default).
+but with Event Function you should use [DefaultHandler](./aws).
 
 So, to add support to Api Gateway you do the following:
 
