--- a/www/docs/main/advanced/adapters/creating-an-adapter.mdx
+++ b/www/docs/main/advanced/adapters/creating-an-adapter.mdx
@@ -3,9 +3,9 @@ title: Creating an Adapter
 position: 2
 ---
 
-As we saw in [Introduction](./introduction), you are already familiar with adapter methods.
+As we saw in [Introduction](/docs/main/intro), you are already familiar with adapter methods.
 
-In this chapter, we will create a new adapter to implement the [AWS Api Gateway V2](../adapters/aws/api-gateway-v2)
+In this chapter, we will create a new adapter to implement the [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2)
 that has the request and response in the following format:
 
 ## Request and Response
@@ -105,7 +105,7 @@ import { AdapterContract } from '@h4ad/serverless-adapter/lib/contracts';
 export class ApiGatewayV2Adapter implements AdapterContract<APIGatewayProxyEventV2, Context, APIGatewayProxyStructuredResultV2> {}
 ```
 
-The interface we need to implement is [AdapterContract](../../api/Contracts/AdapterContract) which takes 3 generic arguments:
+The interface we need to implement is [AdapterContract](/docs/api/Contracts/AdapterContract) which takes 3 generic arguments:
 the event sent by the event source, the context of the serverless environment, and the response that the event source understands.
 
 ## Implementing the `getAdapterName` method
@@ -121,10 +121,10 @@ public getAdapterName(): string {
 ## Implementing the `canHandle` method
 
 When we implement this method, we must study the request event to know which properties are always sent by the event source,
-in case of [AWS Api Gateway V2](../adapters/aws/api-gateway-v2), the most important ones are `requestContext` and `version` and
+in case of [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2), the most important ones are `requestContext` and `version` and
 checking that the value of `version` is equal to `2.0`.
 
-This way, we can implement if the event was sent from [AWS Api Gateway V2](../adapters/aws/api-gateway-v2) as follows:
+This way, we can implement if the event was sent from [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2) as follows:
 
 ```typescript title="api-gateway-v2.adapter.ts"
 public canHandle(event: unknown): event is APIGatewayProxyEventV2 {
@@ -145,14 +145,14 @@ public canHandle(event: unknown): event is APIGatewayProxyEventV2 {
 
 ## Implementing the `getRequest` method
 
-In this method, we need to return the [AdapterRequest](../../api/Contracts/AdapterContract/AdapterRequest) interface,
+In this method, we need to return the [AdapterRequest](/docs/api/Contracts/AdapterContract/AdapterRequest) interface,
 to understand better what we need to return, let's deep into to know more about them.
 
 ### `method`
 
 The HTTP Method to use to create the request to the framework.
 
-In [AWS Api Gateway V2](../adapters/aws/api-gateway-v2) we can take the method from `APIGatewayProxyEventV2`,
+In [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2) we can take the method from `APIGatewayProxyEventV2`,
 accessing the `method` property inside the `http` object that is inside the `requestContext`, the code will look like this:
 
 ```typescript title="api-gateway-v2.adapter.ts"
@@ -164,7 +164,7 @@ const method = event.requestContext.http.method;
 In some cases, you may not have this information from events such as SQS,
 in these specific cases you need to provide a way to control the path,
 we recommend you provide a default option and provide a way for the user to customize,
-such as the implementation of [AWS SQS](../adapters/aws/sqs).
+such as the implementation of [AWS SQS](/docs/main/adapters/aws/sqs).
 
 :::
 
@@ -172,7 +172,7 @@ such as the implementation of [AWS SQS](../adapters/aws/sqs).
 
 The path to use to create the request to the framework.
 
-In the [AWS Api Gateway V2](../adapters/aws/api-gateway-v2), we can grab the path from `APIGatewayProxyEventV2`,
+In the [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2), we can grab the path from `APIGatewayProxyEventV2`,
 acessing the property `rawPath` and combining with `rawQueryString`.
 
 Fortunately, this operation is so common that we provide a function to help you with this operation, see above:
@@ -200,7 +200,7 @@ See the original implementation [here](https://github.com/H4ad/serverless-adapte
 In some cases, you may not have this information from events such as SQS,
 in these specific cases you need to provide a way to control the path,
 we recommend you provide a default option and provide a way for the user to customize,
-such as the implementation of [AWS SQS](../adapters/aws/sqs).
+such as the implementation of [AWS SQS](/docs/main/adapters/aws/sqs).
 
 :::
 
@@ -208,7 +208,7 @@ such as the implementation of [AWS SQS](../adapters/aws/sqs).
 
 The headers to use to create the request to the framework.
 
-In the [AWS Api Gateway V2](../adapters/aws/api-gateway-v2), we can grab the headers from `APIGatewayProxyEventV2`,
+In the [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2), we can grab the headers from `APIGatewayProxyEventV2`,
 acessing the property `headers`.
 
 But not only need to pass the property `headers`, we need to take care of headers not being like `"accept-lang": ['pt-BR', 'en-US']`,
@@ -228,7 +228,7 @@ if (event.cookies)
 
 In some cases, you may not have this information from events such as SQS,
 in these specific cases you can just mock the headers with default values,
-such as the implementation of [AWS SQS](../adapters/aws/sqs).
+such as the implementation of [AWS SQS](/docs/main/adapters/aws/sqs).
 
 :::
 
@@ -238,10 +238,10 @@ The body as buffer to use to create the request to the framework
 
 Well, the body actually can be anything you want, sometimes you will receive a JSON (eg: Api Gateway), Base64 or just plain javascript objects (eg: AWS SQS).ts
 
-In the [AWS Api Gateway V2](../adapters/aws/api-gateway-v2), we can grab the body from `APIGatewayProxyEventV2`,
+In the [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2), we can grab the body from `APIGatewayProxyEventV2`,
 acessing the property `body` and use the property `isBase64Encoded` to determine if the body is base64.
 
-To help to transform the body from JSON or base64 to Buffer, we have the helper [getEventBodyAsBuffer](../../api/Core/getEventBodyAsBuffer).
+To help to transform the body from JSON or base64 to Buffer, we have the helper [getEventBodyAsBuffer](/docs/api/Core/getEventBodyAsBuffer).
 
 The code will look like this:
 
@@ -269,7 +269,7 @@ You need to set the `content-length` header to the value returned by the `getEve
 
 The remote address (client ip) to use to create the request to the framework
 
-In the [AWS Api Gateway V2](../adapters/aws/api-gateway-v2), we can grab the remote address from `APIGatewayProxyEventV2`,
+In the [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2), we can grab the remote address from `APIGatewayProxyEventV2`,
 acessing the property `requestContext.http.sourceIp`.
 
 ```ts
@@ -318,7 +318,7 @@ public getResponse({
 
 Why did I put all the code? Because in the response, I don't have much to explain because each adapter will have your own implementation for this function.
 
-[AWS SQS](../adapters/aws/sqs) for example, they don't need to return anything, so the implementation is:
+[AWS SQS](/docs/main/adapters/aws/sqs) for example, they don't need to return anything, so the implementation is:
 
 ```ts title="sqs.adapter.ts"
 public getResponse(): IEmptyResponse {
@@ -330,7 +330,7 @@ So look closely at the event source documents you are creating the adapter for a
 
 :::tip
 
-You can check the [GetResponseAdapterProps](../../api/Contracts/AdapterContract/GetResponseAdapterProps) to check which data you have from the response of the framework.
+You can check the [GetResponseAdapterProps](/docs/api/Contracts/AdapterContract/GetResponseAdapterProps) to check which data you have from the response of the framework.
 
 :::
 
@@ -342,7 +342,7 @@ Well, errors can happen and we need to have a way to handle those cases to not m
 
 So this method is used to those specific cases, to ensure how to map the error received to event source deal properly.
 
-In the [AWS Api Gateway V2](../adapters/aws/api-gateway-v2), we handle like this:
+In the [AWS Api Gateway V2](/docs/main/adapters/aws/api-gateway-v2), we handle like this:
 
 ```ts title="api-gateway-v2.adapter.ts"
 public onErrorWhileForwarding({
@@ -377,7 +377,7 @@ When implementing this method, you must call `delegatedResolver.succeed` or `del
 
 :::
 
-Other adapters may fail when an error occurs, the [AWS SQS](../adapters/aws/sqs) adapter does that.
+Other adapters may fail when an error occurs, the [AWS SQS](/docs/main/adapters/aws/sqs) adapter does that.
 
 ```ts title="sqs.adapter.ts"
 public onErrorWhileForwarding({
