--- a/www/docs/main/frameworks/hapi.mdx
+++ b/www/docs/main/frameworks/hapi.mdx
@@ -33,12 +33,12 @@ export const handler = ServerlessAdapter.new(app)
 
 :::tip
 
-Is your application instance creation asynchronous? Look the [LazyFramework](./lazy) which helps you in asynchronous startup.
+Is your application instance creation asynchronous? Look the [LazyFramework](./helpers/lazy) which helps you in asynchronous startup.
 
 :::
 
 :::tip
 
-Need to deal with CORS? See [CorsFramework](./cors) which helps you to add correct headers.
+Need to deal with CORS? See [CorsFramework](./helpers/cors) which helps you to add correct headers.
 
 :::
