--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -54,8 +54,10 @@ Additionally, we have some helper frameworks that you can combine with the above
   - Use this framework to provide a way to create the instance of your app asynchronously.
   - With him, you can create an instance of Express or Fastify asynchronously, [see the docs](./frameworks/helpers/lazy).
 - CORS support without rely on original framework with ([CorsFramework](./frameworks/helpers/cors))
-  - Use this framework to provide a way to handle CORS in frameworks like `trpc`.
+  - Use this framework to provide a way to handle CORS in frameworks like `trpc`, `deepkit` and others.
   - Or use to get faster responses when method is `OPTIONS`.
+- Content Type parsing support without rely on original framework with ([BodyParserFramework](./frameworks/helpers/body-parser))
+  - Use this framework to provide a way to handle content type parsing in frameworks like `trpc`, `deepkit` and others.
 
 We support these event sources:
 
