docs(apollo-server): added documentation for apollo server

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -40,6 +40,7 @@ Currently, we support these clouds (handlers):
 
 Additionally, we support these frameworks:
 
+- [Apollo Server](https://www.apollographql.com/docs/apollo-server/) by using ([ApolloServerFramework](./frameworks/apollo-server))
 - [Deepkit](https://docs.deepkit.io/) by using ([HttpDeepkitFramework](./frameworks/deepkit))
 - [Express](https://expressjs.com/) by using ([ExpressFramework](./frameworks/express))
 - [Fastify](https://www.fastify.io/) by using ([FastifyFramework](./frameworks/fastify))
