--- a/www/docs/main/adapters/aws/dynamodb.mdx
+++ b/www/docs/main/adapters/aws/dynamodb.mdx
@@ -102,3 +102,31 @@ You **MUST** check if the header `Host` contains the value of `dynamodb.amazonaw
 
 Without checking this header, if you add this adapter and [AWS API Gateway V2](./api-gateway-v2) adapter, you will be vulnerable to attacks
 because anyone can create a `POST` request to `/dynamo`.
+
+## Batch Item Failures
+
+If you enable this batch item failure option, to be able to partially return that some items failed to process, first configure your Adapter:
+
+```ts
+const adapter = new DynamoDBAdapter({
+  batch: true,
+});
+```
+
+And then, just return the following JSON in the route that processes the DynamoDB event.
+
+```json
+{
+  "batchItemFailures": [
+    {
+        "itemIdentifier": "id2"
+    },
+    {
+        "itemIdentifier": "id4"
+    }
+  ]
+}
+```
+
+> [Reference](https://docs.aws.amazon.com/lambda/latest/dg/with-ddb.html#services-ddb-batchfailurereporting)
+
