docs(gcp): added docs about how to use

--- a/www/docs/main/intro.mdx
+++ b/www/docs/main/intro.mdx
@@ -91,8 +91,8 @@ We support these event sources:
   - [Functions](https://docs.digitalocean.com/products/functions/quickstart/sample-functions/) by using [DigitalOceanHandler](./handlers/digital-ocean).
 - Firebase
   - [Http Events](https://firebase.google.com/docs/functions/http-events) using ([HttpFirebaseHandler](./handlers/firebase)).
-- GCP
-  - The support is coming soon.
+- Google Cloud Functions (GCP)
+  - [Http Functions](https://cloud.google.com/functions/docs/console-quickstart) using ([GCPHandler](./handlers/gcp)).
 
 We support these resolvers:
 
